--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.3",
+    "@mui/material": "^5.14.5",
     "eslint": "8.47.0",
-    "eslint-config-next": "13.4.18",
-    "next": "13.4.18",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "eslint-config-next": "^13.4.18",
+    "next": "^13.4.18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-player": "^2.12.0"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
   }
 }
