--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "^13.4.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-player": "^2.12.0"
+    "react-player": "^2.12.0",
+    "require-context": "^1.1.0"
   },
   "devDependencies": {
     "gh-pages": "^6.0.0"
