--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "^13.4.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-player": "^2.12.0",
     "require-context": "^1.1.0"
   },
