--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-player": "^2.12.0",
-    "require-context": "^1.1.0"
+    "require-context": "^1.1.0",
+    "youtube-player": "^5.6.0"
   },
   "devDependencies": {
     "gh-pages": "^6.0.0"
